--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "@modelcontextprotocol/sdk": "1.11.1",
     "uuid": "^11.0.3",
     "simple-flakeid": "^0.0.5",
-    "express": "^4.18.2",
-    "eventsource": "^2.0.2",
-    "zod": "^3.24.2"
+    "eventsource": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
